--- a/Css/main.Css
+++ b/Css/main.Css
@@ -15,7 +15,7 @@ body{
     opacity: 0.8;
 }
 #home{
-    background-image: url(../İmg/home4.jpg);
+    background-image: url(../img/home4.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
